ROS_Workspace/src/log/build_2023-08-21_16-17-26/UGV1Main/stderr.log
  File "/home/max/Desktop/VisionCode/Honours_a1797823_a1764124/ROS_Workspace/src/install/UGV1Main/lib/python3.8/site-packages/UGV1Main/UGV1Main.py", line 120
    def stateMachine(self)
                         ^
SyntaxError: invalid syntax

